# ClientServerMatching

./: CMakeLists.txt  README.md  readme.md
src/: CMakeLists.txt
src/client/: Client.cpp  Client.h  main.cpp
src/hpp/: Common.hpp
src/server/: Core.cpp  Core.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
src/server/user/: Balance.cpp  Balance.h  Offer.cpp  Offer.h  User.cpp  User.h
src/tests/TestAccountFunctionality/: TestAuthorization.cpp  TestAuthorization.h  TestRegistration.cpp  TestRegistration.h  TestRemovingUser.cpp  TestRemovingUser.h
src/tests/TestUserFunctionality/: TestBasic.cpp  TestBasic.h  TestOfferCreation.cpp  TestOfferCreation.h  TestOfferMerging.cpp  TestOfferMerging.h  TestShowAllOffers.cpp  TestShowAllOffers.h  TestShowStatistic.cpp  TestShowStatistic.h
